  irc.look.open_pv_near_server to irc.look.new_channel_position and
  irc.look.new_pv_position with new values (none, next or near_server)
* irc: display old channel topic when topic is unset (task #9780)
* irc: add new info_hashtable "irc_parse_message"
* irc: fix crash/bug when option "addresses" for a server is unset or changed
  when WeeChat is connected to this server (bug #31268)
* irc: fix bug with hostmasks in command /ignore (bug #30716)
* rmodifier: new plugin "rmodifier": alter modifier strings with regular
  expressions (bug #26964)
* relay: beta version of IRC proxy
* scripts: add missing function "infolist_reset_item_cursor" in API (bug #31057)
* ruby: fix compilation with Ruby 1.9.2 (patch #7316)

Version 0.3.3 (2010-08-07)
--------------------------

* core: use "!" to reverse a regex in a filter (to keep lines matching regex
  and hide other lines) (task #10032)
* core: add keys for undo/redo changes on command line
  (default: ctrl+underscore and alt+underscore) (task #9483)
* core: add new option weechat.look.align_end_of_lines
* core: add new option weechat.look.confirm_quit
* core: add new option weechat.color.status_name_ssl (task #10339)
* core: fix bug with scroll_unread: do not scroll to a filtered line
  (bug #29991)
* core: fix crash with hook_process (when timer is called on a deleted hook
  process)
* core: fix display bug with special chars (ascii value below 32) (bug #30602)
* core: fix display bug with attributes like underlined in bars (bug #29889)
* core: add hashtables with new functions in plugin API
* api: fix bug with replacement char in function string_remove_color
  (bug #30296)
* api: add function "string_expand_home", fix bug with replacement of home in
  paths
* irc: fix bug in parser when no argument is received after command, no
  callback was called, and message was silently ignored (bug #30640)
* irc: add new option irc.look.nick_color_stop_chars